--- a/Blogg/Views/Blog/Post.cshtml
+++ b/Blogg/Views/Blog/Post.cshtml
@@ -46,8 +46,16 @@
 @{
     if (User.Identity.IsAuthenticated)
     {
-        <div id="new-comment" class="editor-field">
-            @Html.Partial("_CreateCommentPartial")
-        </div>
+        <form id="comment-form" class="editor-field">
+            <input type="number" name="PostId" class="hidden static-parameter" value="@Model.PostId" />
+            <input type="text" name="Author" class="hidden static-parameter" value="@User.Identity.Name" />
+            <textarea name="Content"></textarea>
+        </form>
+        <input type="button" id="post-comment" value="Post comment" />
     }
+}
+
+@section Scripts {
+    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    <script src="~/Scripts/BlogScript.js"></script>
 }
